feat: add more blog posts

--- a/app/blog/3blue1brown/page.mdx
+++ b/app/blog/3blue1brown/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "3Blue1Brown: Making Math Beautiful and Accessible",
   description: `An overview of 3Blue1Brown, a YouTube channel that uses visual storytelling to explain complex mathematical concepts.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>3Blue1Brown: Making Math Beautiful and Accessible</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
