--- a/app/blog/MinutePhysics/page.mdx
+++ b/app/blog/MinutePhysics/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "MinutePhysics: Simplifying Physics One Minute at a Time",
   description: `An exploration of MinutePhysics, a YouTube channel that explains complex physics concepts through simple and engaging animations.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>MinutePhysics: Simplifying Physics One Minute at a Time</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
