--- a/app/blog/abouzaidvlogs/page.mdx
+++ b/app/blog/abouzaidvlogs/page.mdx
@@ -4,12 +4,12 @@ export const metadata = {
   title: "Abouzaid Vlogs: Adventures and Insights from Morocco",
   description: `Join Abouzaid Vlogs on a journey through Morocco, exploring its culture, landscapes, and daily life through engaging and heartfelt vlogs.`,
   date: "May 18, 2024",
-  authors: ["Jane Doe"],
+  authors: ["Charlotte"],
 };
 
 <h1>Abouzaid Vlogs: Adventures and Insights from Morocco</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By Jane Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
