--- a/app/blog/asapscience/page.mdx
+++ b/app/blog/asapscience/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "AsapSCIENCE: Simplifying Science Through Fun and Creativity",
   description: `A closer look at AsapSCIENCE, a YouTube channel that makes science fun and accessible through creative animations and engaging explanations.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>AsapSCIENCE: Simplifying Science Through Fun and Creativity</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
