--- a/app/blog/ted-ed/page.mdx
+++ b/app/blog/ted-ed/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "TED-Ed: Lessons Worth Sharing",
   description: `A look at TED-Ed, a YouTube channel that creates high-quality educational videos on a wide range of topics, featuring animations and expert insights.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>TED-Ed: Lessons Worth Sharing</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
