--- a/app/blog/veritasium/page.mdx
+++ b/app/blog/veritasium/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "Veritasium: Unveiling the Truth in Science",
   description: `An overview of Veritasium, a YouTube channel that explores scientific concepts and debunks common misconceptions.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>Veritasium: Unveiling the Truth in Science</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
