--- a/app/blog/InaNutshell/page.mdx
+++ b/app/blog/InaNutshell/page.mdx
@@ -5,14 +5,14 @@ export const metadata = {
     "Kurzgesagt – In a Nutshell: Exploring Complex Ideas Through Animation",
   description: `An in-depth look at Kurzgesagt – In a Nutshell, a YouTube channel that explains complex scientific and philosophical ideas through beautifully animated videos.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>Kurzgesagt – In a Nutshell: Exploring Complex Ideas Through Animation</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
