--- a/app/blog/JPerm/page.mdx
+++ b/app/blog/JPerm/page.mdx
@@ -4,12 +4,12 @@ export const metadata = {
   title: "J Perm: Mastering the Art of Speedcubing",
   description: `Discover J Perm, a YouTube channel dedicated to teaching the art of speedcubing with comprehensive tutorials and tips for all skill levels.`,
   date: "May 18, 2024",
-  authors: ["Jane Doe"],
+  authors: ["Charlotte"],
 };
 
 <h1>J Perm: Mastering the Art of Speedcubing</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By Jane Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
