--- a/app/blog/lemmino/page.mdx
+++ b/app/blog/lemmino/page.mdx
@@ -4,12 +4,12 @@ export const metadata = {
   title: "LEMMiNO: Unraveling the Mysteries of the World",
   description: `Explore LEMMiNO, a YouTube channel that dives into intriguing and lesser-known mysteries, facts, and stories from around the globe.`,
   date: "May 18, 2024",
-  authors: ["Jane Doe"],
+  authors: ["Charlotte"],
 };
 
 <h1>LEMMiNO: Unraveling the Mysteries of the World</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By Jane Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
