--- a/app/blog/mattdavella/page.mdx
+++ b/app/blog/mattdavella/page.mdx
@@ -5,14 +5,14 @@ export const metadata = {
     "The Minimalist Lifestyle of Matt D'Avella: A Journey Towards Simplicity",
   description: `An exploration of Matt D'Avella's YouTube channel, focusing on minimalism, productivity, and self-improvement.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>The Minimalist Lifestyle of Matt D'Avella: A Journey Towards Simplicity</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
