--- a/app/blog/mkbdh/page.mdx
+++ b/app/blog/mkbdh/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "Marques Brownlee: The Face of Tech Reviews on YouTube",
   description: `A look into Marques Brownlee's YouTube channel, known for its comprehensive and high-quality tech reviews.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>Marques Brownlee: The Face of Tech Reviews on YouTube</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
