--- a/app/blog/scishow/page.mdx
+++ b/app/blog/scishow/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "SciShow: Unraveling the Mysteries of Science",
   description: `An exploration of SciShow, a YouTube channel that delves into a wide range of scientific topics with enthusiasm and clarity.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>SciShow: Unraveling the Mysteries of Science</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
