--- a/app/blog/smartereveryday/page.mdx
+++ b/app/blog/smartereveryday/page.mdx
@@ -4,14 +4,14 @@ export const metadata = {
   title: "SmarterEveryDay: Exploring the Wonders of Science",
   description: `A look into SmarterEveryDay, a YouTube channel that delves into scientific phenomena and experiments with a sense of curiosity and wonder.`,
   date: "May 18, 2024",
-  authors: ["John Doe"],
+  authors: ["Charlotte"],
 };
 
 {" "}
 
 <h1>SmarterEveryDay: Exploring the Wonders of Science</h1>
 <div className="text-sm text-gray-500 dark:text-gray-400">
-  By John Doe | Published on May 18, 2024
+  By Charlotte | Published on May 18, 2024
 </div>
 <section id="introduction">
   <h2>Introduction</h2>
