feat: change download icons on home page

--- a/app/blog/Abroad-in-Japan/page.mdx
+++ b/app/blog/Abroad-in-Japan/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Abroad in Japan: Exploring Japanese Culture and Lifestyle",
   description: `Join Abroad in Japan on his YouTube channel as he shares his experiences living and working in Japan, exploring its unique culture, food, and lifestyle.`,
   date: "March 10, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Abroad in Japan: Exploring Japanese Culture and Lifestyle</h1>
