--- a/app/blog/AdrianaLua/page.mdx
+++ b/app/blog/AdrianaLua/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Adriana Lua: The Brazilian Cooking Sensation",
   description: `Explore Adriana Lua's YouTube channel, where Brazilian chef Adriana shares her passion for cooking with recipes, tips, and culinary adventures.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Adriana Lua: The Brazilian Cooking Sensation</h1>
