--- a/app/blog/AdrianeGalisteu/page.mdx
+++ b/app/blog/AdrianeGalisteu/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Adriane Galisteu: The Multifaceted Brazilian Star",
   description: `Dive into Adriane Galisteu's YouTube channel, where the Brazilian actress and television presenter shares her glamorous lifestyle, fashion tips, and personal insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Adriane Galisteu: The Multifaceted Brazilian Star</h1>
