--- a/app/blog/AiltonLuiz/page.mdx
+++ b/app/blog/AiltonLuiz/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Ailton Luiz Dias Siqueira Júnior: The Tech Guru",
   description: `Join Ailton Luiz Dias Siqueira Júnior on his YouTube channel as he explores the latest in technology, providing reviews, tutorials, and expert advice.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Ailton Luiz Dias Siqueira Júnior: The Tech Guru</h1>
