--- a/app/blog/Alicia-Widar/page.mdx
+++ b/app/blog/Alicia-Widar/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Alicia Widar",
   description: `Join Alicia Widar on her YouTube channel as she shares her expertise in business, entrepreneurship, and personal development.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Alicia Widar</h1>
