--- a/app/blog/AlineCasteloBranco/page.mdx
+++ b/app/blog/AlineCasteloBranco/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Aline Castelo Branco: The Lifestyle Guru",
   description: `Discover Aline Castelo Branco's YouTube channel, where she shares lifestyle tips, home decor ideas, and personal vlogs.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Aline Castelo Branco: The Lifestyle Guru</h1>
@@ -60,6 +60,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
