--- a/app/blog/AmsterDebs/page.mdx
+++ b/app/blog/AmsterDebs/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "AmsterDebs: Exploring Amsterdam and Dutch Culture",
   description: `Join AmsterDebs on her YouTube channel as she explores Amsterdam, shares insights into Dutch culture, and provides travel tips.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>AmsterDebs: Exploring Amsterdam and Dutch Culture</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
