--- a/app/blog/AshleeMarie/page.mdx
+++ b/app/blog/AshleeMarie/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Ashlee Marie: Culinary Creations and Cake Decorating",
   description: `Join Ashlee Marie on her YouTube channel as she shares her culinary creations, cake decorating tutorials, and cooking tips.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Ashlee Marie: Culinary Creations and Cake Decorating</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
