--- a/app/blog/BakeitSimple/page.mdx
+++ b/app/blog/BakeitSimple/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Bake it Simple: Easy Baking Recipes and Tips",
   description: `Discover Bake it Simple's YouTube channel for easy baking recipes, step-by-step tutorials, and helpful baking tips.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Bake it Simple: Easy Baking Recipes and Tips</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
