--- a/app/blog/CodinginPublic/page.mdx
+++ b/app/blog/CodinginPublic/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Coding in Public: Open-Source Coding Tutorials",
   description: `An in-depth look at Coding in Public, a YouTube channel where viewers can learn coding through open-source projects and tutorials.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Coding in Public: Open-Source Coding Tutorials</h1>
