--- a/app/blog/DESCEALETRASHOW/page.mdx
+++ b/app/blog/DESCEALETRASHOW/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "DESCE A LETRA SHOW: Brazilian Music and Culture",
   description: `An in-depth look at DESCE A LETRA SHOW, a YouTube channel that explores Brazilian music, culture, and interviews with artists.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>DESCE A LETRA SHOW: Brazilian Music and Culture</h1>
