--- a/app/blog/Doublelift/page.mdx
+++ b/app/blog/Doublelift/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Doublelift: The Journey of a Professional Gamer",
   description: `Discover Doublelift, a YouTube channel where professional gamer Yiliang Peng shares gameplay, insights, and experiences from the world of esports.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Doublelift: The Journey of a Professional Gamer</h1>
