--- a/app/blog/Front-end London/page.mdx
+++ b/app/blog/Front-end London/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Front-end London: Exploring Web Development",
   description: `Explore Front-end London, a YouTube channel that offers insights, talks, and tutorials on front-end web development.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Front-end London: Exploring Web Development</h1>
