--- a/app/blog/FrontendMasters/page.mdx
+++ b/app/blog/FrontendMasters/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Frontend Masters: Advanced Web Development Training",
   description: `Explore Frontend Masters, a YouTube channel offering advanced web development courses and tutorials from industry leaders.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Frontend Masters: Advanced Web Development Training</h1>
