--- a/app/blog/FullyChargedShow/page.mdx
+++ b/app/blog/FullyChargedShow/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Fully Charged Show: The Future of Clean Energy and Electric Vehicles",
   description: `Explore Fully Charged Show, a YouTube channel dedicated to the latest in clean energy, electric vehicles, and sustainable technology.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Fully Charged Show: The Future of Clean Energy and Electric Vehicles</h1>
