--- a/app/blog/Fuzikun/page.mdx
+++ b/app/blog/Fuzikun/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Fuzikun: Fun and Creative Animations",
   description: `Explore Fuzikun, a YouTube channel that features fun and creative animations that entertain and inspire viewers of all ages.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Fuzikun: Fun and Creative Animations</h1>
