--- a/app/blog/GDC/page.mdx
+++ b/app/blog/GDC/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "GDC: Game Developers Conference Channel",
   description: `Explore GDC, the official YouTube channel of the Game Developers Conference, offering talks, tutorials, and insights from industry leaders.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>GDC: Game Developers Conference Channel</h1>
