--- a/app/blog/GDQuest/page.mdx
+++ b/app/blog/GDQuest/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "GDQuest: Your Guide to Game Development with Godot",
   description: `Explore GDQuest, a YouTube channel dedicated to helping developers create games with the Godot engine through detailed tutorials and resources.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>GDQuest: Your Guide to Game Development with Godot</h1>
