--- a/app/blog/GameDevelopmentCenter/page.mdx
+++ b/app/blog/GameDevelopmentCenter/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Game Development Center: Your Hub for Game Dev Tutorials",
   description: `Explore Game Development Center, a YouTube channel that provides a central hub for game development tutorials and resources.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Game Development Center: Your Hub for Game Dev Tutorials</h1>
