--- a/app/blog/GameDevisFun/page.mdx
+++ b/app/blog/GameDevisFun/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Game Dev Is Fun: Learn Game Development with Ease",
   description: `Explore Game Dev Is Fun, a YouTube channel that offers easy-to-follow tutorials and resources for aspiring game developers.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Game Dev Is Fun: Learn Game Development with Ease</h1>
