--- a/app/blog/GameEndeavor/page.mdx
+++ b/app/blog/GameEndeavor/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Game Endeavor: Passionate Game Development Tutorials",
   description: `Explore Game Endeavor, a YouTube channel that offers passionate and detailed game development tutorials and insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Game Endeavor: Passionate Game Development Tutorials</h1>
