--- a/app/blog/Goodgis/page.mdx
+++ b/app/blog/Goodgis/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Goodgis: Creative and Inspiring Game Development",
   description: `Explore Goodgis, a YouTube channel that offers creative and inspiring game development tutorials and insights for aspiring game developers.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Goodgis: Creative and Inspiring Game Development</h1>
