--- a/app/blog/HeartBeast/page.mdx
+++ b/app/blog/HeartBeast/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "HeartBeast: Master Game Development with Expert Tutorials",
   description: `Explore HeartBeast, a YouTube channel that offers expert tutorials and insights into game development, helping viewers master the craft.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>HeartBeast: Master Game Development with Expert Tutorials</h1>
