--- a/app/blog/InaNutshell/page.mdx
+++ b/app/blog/InaNutshell/page.mdx
@@ -5,7 +5,7 @@ export const metadata = {
     "Kurzgesagt – In a Nutshell: Exploring Complex Ideas Through Animation",
   description: `An in-depth look at Kurzgesagt – In a Nutshell, a YouTube channel that explains complex scientific and philosophical ideas through beautifully animated videos.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
