--- a/app/blog/IndieGameHustle/page.mdx
+++ b/app/blog/IndieGameHustle/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Indie Game Hustle: A Roadmap for Aspiring Indie Developers",
   description: `Explore Indie Game Hustle, a YouTube channel that provides a roadmap for aspiring indie developers through tutorials, tips, and industry insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Indie Game Hustle: A Roadmap for Aspiring Indie Developers</h1>
