--- a/app/blog/JPerm/page.mdx
+++ b/app/blog/JPerm/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "J Perm: Mastering the Art of Speedcubing",
   description: `Discover J Perm, a YouTube channel dedicated to teaching the art of speedcubing with comprehensive tutorials and tips for all skill levels.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>J Perm: Mastering the Art of Speedcubing</h1>
