--- a/app/blog/JablinskiGames/page.mdx
+++ b/app/blog/JablinskiGames/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "JablinskiGames: A Unique Blend of Gaming and Entertainment",
   description: `A deep dive into JablinskiGames, a YouTube channel hosted by actor and musician Jack Black, offering a unique blend of gaming content, vlogs, and promotional videos.`,
   date: "June 4, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
