--- a/app/blog/Jabrils/page.mdx
+++ b/app/blog/Jabrils/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Jabrils: Exploring the Intersection of AI and Game Development",
   description: `Explore Jabrils, a YouTube channel that delves into the intersection of AI and game development, offering innovative tutorials and insights for developers.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Jabrils: Exploring the Intersection of AI and Game Development</h1>
