--- a/app/blog/MajesticCasual /page.mdx
+++ b/app/blog/MajesticCasual /page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Majestic Casual: Curating the Soundtrack of Your Life",
   description: `An in-depth look at Majestic Casual, a YouTube channel renowned for its curated selection of electronic, chillwave, and indie pop music.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Majestic Casual: Curating the Soundtrack of Your Life</h1>
