--- a/app/blog/MinutePhysics/page.mdx
+++ b/app/blog/MinutePhysics/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "MinutePhysics: Simplifying Physics One Minute at a Time",
   description: `An exploration of MinutePhysics, a YouTube channel that explains complex physics concepts through simple and engaging animations.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
