--- a/app/blog/Nanogenix/page.mdx
+++ b/app/blog/Nanogenix/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Nanogenix: The World of Mobile Gaming",
   description: `An in-depth look at Nanogenix, a YouTube channel dedicated to mobile gaming, featuring gameplay, reviews, and tips on games like Dragon Ball Z: Dokkan Battle.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Nanogenix: The World of Mobile Gaming</h1>
@@ -82,6 +82,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
