--- a/app/blog/The Boy Who Bakes/page.mdx
+++ b/app/blog/The Boy Who Bakes/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "The Boy Who Bakes: Baking Adventures with Edd Kimber",
   description: `An in-depth look at The Boy Who Bakes, a YouTube channel where Edd Kimber shares his passion for baking through tutorials and recipes.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>The Boy Who Bakes: Baking Adventures with Edd Kimber</h1>
