--- a/app/blog/This-Guy-Edits/page.mdx
+++ b/app/blog/This-Guy-Edits/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "This Guy Edits: The Art of Film Editing",
   description: `An in-depth look at "This Guy Edits," a YouTube channel dedicated to the craft of film editing and storytelling through video.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>This Guy Edits: The Art of Film Editing</h1>
@@ -83,6 +83,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
