--- a/app/blog/abouzaidvlogs/page.mdx
+++ b/app/blog/abouzaidvlogs/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Abouzaid Vlogs: Adventures and Insights from Morocco",
   description: `Join Abouzaid Vlogs on a journey through Morocco, exploring its culture, landscapes, and daily life through engaging and heartfelt vlogs.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Abouzaid Vlogs: Adventures and Insights from Morocco</h1>
