--- a/app/blog/academind/page.mdx
+++ b/app/blog/academind/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Academind: Programming and Technology",
   description: `Join the Academind community on his YouTube channel as he shares his expertise in programming, technology, and software development.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Academind: Programming and Technology</h1>
