--- a/app/blog/asapscience/page.mdx
+++ b/app/blog/asapscience/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "AsapSCIENCE: Simplifying Science Through Fun and Creativity",
   description: `A closer look at AsapSCIENCE, a YouTube channel that makes science fun and accessible through creative animations and engaging explanations.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
