--- a/app/blog/asmr-maddy/page.mdx
+++ b/app/blog/asmr-maddy/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "ASMR Maddy: Relaxation and Sensory Experiences",
   description: `Join ASMR Maddy on her YouTube channel as she creates soothing, sensory experiences to help you relax and unwind.`,
   date: "June 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>ASMR Maddy: Relaxation and Sensory Experiences</h1>
