--- a/app/blog/colors-tv/page.mdx
+++ b/app/blog/colors-tv/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Colors TV",
   description: `Get the best of Indian entertainment and culture with Colors TV on their official YouTube channel!`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
