--- a/app/blog/diolinux/page.mdx
+++ b/app/blog/diolinux/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Diolinux: Your Guide to Linux and Open Source",
   description: `Explore Diolinux, a YouTube channel that provides tutorials, reviews, and news about Linux and open-source software.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Diolinux: Your Guide to Linux and Open Source</h1>
