--- a/app/blog/failarmy/page.mdx
+++ b/app/blog/failarmy/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "FailArmy: The Best of Viral Fails and Funny Videos",
   description: `Explore FailArmy, a YouTube channel that curates the best viral fails and funny videos from around the world, providing endless entertainment.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>FailArmy: The Best of Viral Fails and Funny Videos</h1>
