--- a/app/blog/geopold/page.mdx
+++ b/app/blog/geopold/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Geopold: Exploring Geography and Geopolitics",
   description: `An in-depth look at Geopold, a YouTube channel dedicated to explaining geography, geopolitics, and global issues through engaging videos and detailed analysis.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Geopold: Exploring Geography and Geopolitics</h1>
@@ -84,6 +84,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
