--- a/app/blog/hond/page.mdx
+++ b/app/blog/hond/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Hond: Adventures in Travel and Exploration",
   description: `An in-depth look at Hond, a YouTube channel dedicated to adventure travel, exploration, and cultural experiences around the globe.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Hond: Adventures in Travel and Exploration</h1>
@@ -84,6 +84,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
