--- a/app/blog/honda/page.mdx
+++ b/app/blog/honda/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Honda: Innovation and Performance on YouTube",
   description: `An in-depth look at the Honda YouTube channel, dedicated to showcasing Honda vehicles, technology, and the brand's commitment to innovation and performance.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Honda: Innovation and Performance on YouTube</h1>
@@ -89,6 +89,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
