--- a/app/blog/lemmino/page.mdx
+++ b/app/blog/lemmino/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "LEMMiNO: Unraveling the Mysteries of the World",
   description: `Explore LEMMiNO, a YouTube channel that dives into intriguing and lesser-known mysteries, facts, and stories from around the globe.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>LEMMiNO: Unraveling the Mysteries of the World</h1>
