--- a/app/blog/milk/page.mdx
+++ b/app/blog/milk/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Milk: A Blend of Gaming and Entertainment",
   description: `A deep dive into Milk, a YouTube channel hosted by Millicent Sailor Ramsey, offering a unique blend of gaming content, vlogs, and promotional videos.`,
   date: "June 4, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
