--- a/app/blog/mkbdh/page.mdx
+++ b/app/blog/mkbdh/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Marques Brownlee: The Face of Tech Reviews on YouTube",
   description: `A look into Marques Brownlee's YouTube channel, known for its comprehensive and high-quality tech reviews.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
