--- a/app/blog/mrbeast/page.mdx
+++ b/app/blog/mrbeast/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "MrBeast: Changing Lives, One Video at a Time",
   description: `Explore MrBeast, a YouTube channel known for its philanthropic acts, creative challenges, and entertaining content that captures the hearts of millions.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>MrBeast: Changing Lives, One Video at a Time</h1>
