--- a/app/blog/scishow/page.mdx
+++ b/app/blog/scishow/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "SciShow: Unraveling the Mysteries of Science",
   description: `An exploration of SciShow, a YouTube channel that delves into a wide range of scientific topics with enthusiasm and clarity.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
