--- a/app/blog/set-india/page.mdx
+++ b/app/blog/set-india/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "SET India",
   description: `Join SET India on their YouTube channel as they bring you the best of Indian television and entertainment.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>SET India</h1>
