--- a/app/blog/smartereveryday/page.mdx
+++ b/app/blog/smartereveryday/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "SmarterEveryDay: Exploring the Wonders of Science",
   description: `A look into SmarterEveryDay, a YouTube channel that delves into scientific phenomena and experiments with a sense of curiosity and wonder.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
