--- a/app/blog/sony-sab/page.mdx
+++ b/app/blog/sony-sab/page.mdx
@@ -3,7 +3,7 @@ export const metadata = {
   title: "Sony SAB",
   description: `Join Sony SAB on their YouTube channel as they bring you the best of Hindi comedy, drama, and entertainment.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Sony SAB</h1>
