--- a/app/blog/t-series/page.mdx
+++ b/app/blog/t-series/page.mdx
@@ -3,7 +3,7 @@ export const metadata = {
   title: "T-Series",
   description: `Join T-Series on their YouTube channel as they share the latest Bollywood music, movie trailers, and behind-the-scenes footage.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>T-Series</h1>
