--- a/app/blog/tastemade/page.mdx
+++ b/app/blog/tastemade/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Tastemade: A Culinary and Lifestyle Journey",
   description: `An in-depth look at Tastemade, a YouTube channel that creates video content focusing on food, travel, and home design.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Tastemade: A Culinary and Lifestyle Journey</h1>
