--- a/app/blog/ted-ed/page.mdx
+++ b/app/blog/ted-ed/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "TED-Ed: Lessons Worth Sharing",
   description: `A look at TED-Ed, a YouTube channel that creates high-quality educational videos on a wide range of topics, featuring animations and expert insights.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
