--- a/app/blog/veritasium/page.mdx
+++ b/app/blog/veritasium/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Veritasium: Unveiling the Truth in Science",
   description: `An overview of Veritasium, a YouTube channel that explores scientific concepts and debunks common misconceptions.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
