--- a/app/blog/wwe/page.mdx
+++ b/app/blog/wwe/page.mdx
@@ -3,7 +3,7 @@ export const metadata = {
   title: "WWE",
   description: `Join the world of sports entertainment with WWE on their official YouTube channel!`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>WWE</h1>
