--- a/app/blog/xracingvideos/page.mdx
+++ b/app/blog/xracingvideos/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Xracing Videos: High-Octane Motorsports Action",
   description: `An in-depth look at Xracing Videos, a YouTube channel dedicated to showcasing thrilling motorsports events and racing highlights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Xracing Videos: High-Octane Motorsports Action</h1>
