--- a/app/blog/zee-tv/page.mdx
+++ b/app/blog/zee-tv/page.mdx
@@ -3,7 +3,7 @@ export const metadata = {
   title: "ZEE TV",
   description: `Join ZEE TV on their YouTube channel as they bring you the best of Indian television and entertainment.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>ZEE TV</h1>
