--- a/app/blog/3blue1brown/page.mdx
+++ b/app/blog/3blue1brown/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "3Blue1Brown: Making Math Beautiful and Accessible",
   description: `An overview of 3Blue1Brown, a YouTube channel that uses visual storytelling to explain complex mathematical concepts.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
