--- a/app/blog/AlexandraAnele/page.mdx
+++ b/app/blog/AlexandraAnele/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Alexandra Anele: Makeup Artistry and Beauty Tips",
   description: `Explore Alexandra Anele's YouTube channel, where the talented makeup artist shares tutorials, product reviews, and beauty tips for all.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Alexandra Anele: Makeup Artistry and Beauty Tips</h1>
@@ -60,6 +60,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
