--- a/app/blog/AlineEttz/page.mdx
+++ b/app/blog/AlineEttz/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Aline Ettz: The Art of Creative Makeup",
   description: `Explore Aline Ettz's YouTube channel, where she shares her passion for creative makeup, from fantastical looks to everyday beauty tips.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Aline Ettz: The Art of Creative Makeup</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
