--- a/app/blog/Allrecipes/page.mdx
+++ b/app/blog/Allrecipes/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Allrecipes",
   description: `Join Allrecipes on their YouTube channel as they share delicious recipes, cooking tips, and kitchen hacks.`,
   date: "March 15, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
