--- a/app/blog/AmandaAndrade/page.mdx
+++ b/app/blog/AmandaAndrade/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Amanda Andrade: Fitness and Wellness Journey",
   description: `Join Amanda Andrade on her YouTube channel as she shares her fitness routines, wellness tips, and motivational insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Amanda Andrade: Fitness and Wellness Journey</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
