--- a/app/blog/AmandaPastore/page.mdx
+++ b/app/blog/AmandaPastore/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Amanda Pastore: Lifestyle and Fashion Insights",
   description: `Discover Amanda Pastore's YouTube channel, where she shares her passion for fashion, lifestyle tips, and personal vlogs.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Amanda Pastore: Lifestyle and Fashion Insights</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
