--- a/app/blog/AmigoGringo/page.mdx
+++ b/app/blog/AmigoGringo/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Amigo Gringo: Exploring New York and Beyond",
   description: `Join Amigo Gringo on his YouTube channel as he explores New York City, shares travel tips, and provides cultural insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Amigo Gringo: Exploring New York and Beyond</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
