--- a/app/blog/AmornoVentilador/page.mdx
+++ b/app/blog/AmornoVentilador/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Amor no Ventilador: Real Talk and Relationship Advice",
   description: `Tune into Amor no Ventilador's YouTube channel for candid discussions on relationships, love, and personal growth.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Amor no Ventilador: Real Talk and Relationship Advice</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
