--- a/app/blog/AnaPassaretti/page.mdx
+++ b/app/blog/AnaPassaretti/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Ana Passaretti: Fashion, Beauty, and Lifestyle",
   description: `Discover Ana Passaretti's YouTube channel, where she shares fashion trends, beauty tips, and lifestyle advice.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Ana Passaretti: Fashion, Beauty, and Lifestyle</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
