--- a/app/blog/AndrezaGoulart/page.mdx
+++ b/app/blog/AndrezaGoulart/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Andreza Goulart: Beauty and Lifestyle Enthusiast",
   description: `Explore Andreza Goulart's YouTube channel, where she shares beauty tips, makeup tutorials, and lifestyle advice.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Andreza Goulart: Beauty and Lifestyle Enthusiast</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
