--- a/app/blog/AngelaBright/page.mdx
+++ b/app/blog/AngelaBright/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Angela Bright: Makeup Tutorials and Beauty Tips",
   description: `Join Angela Bright on her YouTube channel as she shares makeup tutorials, beauty tips, and product reviews.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Angela Bright: Makeup Tutorials and Beauty Tips</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
