--- a/app/blog/Aurikatariina/page.mdx
+++ b/app/blog/Aurikatariina/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Aurikatariina: Cleaning Hacks and Home Organization",
   description: `Explore Aurikatariina's YouTube channel for the best cleaning hacks, home organization tips, and satisfying cleaning videos.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Aurikatariina: Cleaning Hacks and Home Organization</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
