--- a/app/blog/AuroraGonzalez/page.mdx
+++ b/app/blog/AuroraGonzalez/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Aurora Gonzalez B: Fashion and Beauty Inspiration",
   description: `Join Aurora Gonzalez B on her YouTube channel as she shares fashion tips, beauty tutorials, and personal style insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Aurora Gonzalez B: Fashion and Beauty Inspiration</h1>
@@ -59,6 +59,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
