--- a/app/blog/AustinFlipsters/page.mdx
+++ b/app/blog/AustinFlipsters/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Austin Flipsters: Real Estate Flipping and Renovation",
   description: `Explore Austin Flipsters' YouTube channel for insights into real estate flipping, renovation projects, and property investment tips.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Austin Flipsters: Real Estate Flipping and Renovation</h1>
@@ -61,6 +61,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
