--- a/app/blog/BassNation/page.mdx
+++ b/app/blog/BassNation/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Bass Nation: The Heartbeat of Bass Music",
   description: `An in-depth look at Bass Nation, a YouTube channel dedicated to promoting bass-heavy music across genres like dubstep, trap, and future bass.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Bass Nation: The Heartbeat of Bass Music</h1>
@@ -83,6 +83,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
