--- a/app/blog/Dunna-Did-It/page.mdx
+++ b/app/blog/Dunna-Did-It/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Dunna Did It: Mastering Photography and Videography",
   description: `An in-depth look at "Dunna Did It," a YouTube channel dedicated to photography, videography, and creative content creation.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Dunna Did It: Mastering Photography and Videography</h1>
@@ -87,6 +87,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
