--- a/app/blog/Freethink/page.mdx
+++ b/app/blog/Freethink/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Freethink: Stories of Innovation and Impact",
   description: `Discover Freethink, a YouTube channel that shares stories of people and ideas changing the world through innovation and impactful solutions.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Freethink: Stories of Innovation and Impact</h1>
