--- a/app/blog/GMTK/page.mdx
+++ b/app/blog/GMTK/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "GMTK: Game Maker's Toolkit",
   description: `Explore GMTK, a YouTube channel that delves into the art of game design, offering in-depth analyses and insights to help developers create better games.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>GMTK: Game Maker's Toolkit</h1>
