--- a/app/blog/GameDevJourney/page.mdx
+++ b/app/blog/GameDevJourney/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "GameDev Journey: Documenting the Path to Game Development",
   description: `Explore GameDev Journey, a YouTube channel that documents the experiences and lessons learned on the path to becoming a game developer.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>GameDev Journey: Documenting the Path to Game Development</h1>
