--- a/app/blog/GameDevwithDrew/page.mdx
+++ b/app/blog/GameDevwithDrew/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "GameDev with Drew: Master Game Development with Expert Tutorials",
   description: `Explore GameDev with Drew, a YouTube channel that offers expert tutorials and insights into game development, helping viewers master the craft.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>GameDev with Drew: Master Game Development with Expert Tutorials</h1>
