--- a/app/blog/GameLinked/page.mdx
+++ b/app/blog/GameLinked/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "GameLinked: Connecting You to the World of Game Development",
   description: `Explore GameLinked, a YouTube channel that connects viewers to the world of game development with tutorials, industry news, and expert insights.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>GameLinked: Connecting You to the World of Game Development</h1>
