--- a/app/blog/Garbaj/page.mdx
+++ b/app/blog/Garbaj/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Garbaj: Practical Game Development Tutorials",
   description: `Explore Garbaj, a YouTube channel offering practical game development tutorials and insights for aspiring game developers.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Garbaj: Practical Game Development Tutorials</h1>
