--- a/app/blog/JonasTyroller/page.mdx
+++ b/app/blog/JonasTyroller/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Jonas Tyroller: Indie Game Development Journey",
   description: `Explore Jonas Tyroller's YouTube channel, where he documents his indie game development journey, sharing insights, tips, and tutorials with aspiring developers.`,
   date: "May 20, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Jonas Tyroller: Indie Game Development Journey</h1>
