--- a/app/blog/WhatIf/page.mdx
+++ b/app/blog/WhatIf/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "What If: Exploring Hypothetical Scenarios",
   description: `An in-depth look at "What If," a YouTube channel dedicated to exploring fascinating hypothetical scenarios and their potential outcomes.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>What If: Exploring Hypothetical Scenarios</h1>
@@ -87,6 +87,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
