--- a/app/blog/alicetv/page.mdx
+++ b/app/blog/alicetv/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "alicetv: A Unique Blend of Entertainment",
   description: `A deep dive into alicetv, a YouTube channel that offers a unique blend of content.`,
   date: "June 4, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
