--- a/app/blog/formula1/page.mdx
+++ b/app/blog/formula1/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   title: "Formula 1: The Pinnacle of Motorsport on YouTube",
   description: `An in-depth look at a YouTube channel dedicated to Formula 1, offering race highlights, analysis, and behind-the-scenes content from the world of motorsport.`,
   date: "June 7, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 <h1>Formula 1: The Pinnacle of Motorsport on YouTube</h1>
@@ -84,6 +84,5 @@ export const metadata = {
 
 export default function MDXPage({ children }) {
   return <MdxLayout>{children}</MdxLayout>;
-
 
 }
