--- a/app/blog/mattdavella/page.mdx
+++ b/app/blog/mattdavella/page.mdx
@@ -5,7 +5,7 @@ export const metadata = {
     "The Minimalist Lifestyle of Matt D'Avella: A Journey Towards Simplicity",
   description: `An exploration of Matt D'Avella's YouTube channel, focusing on minimalism, productivity, and self-improvement.`,
   date: "May 18, 2024",
-  authors: ["Charlotte"],
+  authors: ["Admin"],
 };
 
 {" "}
